@@ -3,6 +3,8 @@
 	* src/interface.c: Change startup dialog from GtkWindow to GtkDialog.
 	The 'modal' behaviour works as expected. Fixes LP: #519828.
 	* po/de.po, AUTHORS: Updated German translation from launchpad.
+	* src/interface.c, po/gnusim8085.pot: Move format tags outside
+	translatable strings. Update pot file accordingly.
 
 2010-05-25  Onkar Shinde  <onkarshinde@gmail.com>
 
